# bevy-diy-ed

./: Cargo.toml
src/: main.rs  text_components.rs
